--- a/floworld/data/json/discuss/prose/2011-12-02-001101.html
+++ b/floworld/data/json/discuss/prose/2011-12-02-001101.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
     <title>野百合也有春天</title>
 	<meta name="viewport" content="width=device-width; initial-scale=1.0;"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
