--- a/floworld/data/json/discuss/baike/2011-12-02-001058.html
+++ b/floworld/data/json/discuss/baike/2011-12-02-001058.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
     <title>花的颜色是怎么形成的</title>
 	<meta name="viewport" content="width=device-width; initial-scale=1.0;"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
