update the flower world official site in about activity

--- a/floworld/assets/setting_about_link.html
+++ b/floworld/assets/setting_about_link.html
@@ -19,7 +19,7 @@
             <br/>
             <span>新浪微博:</span><br/><span><a href='http://weibo.com/u/2642639651'>http://weibo.com/u/2642639651</a></span>
             <br/>
-            <span>官方网站:</span><br/><span><a href='http://www.kaiyuanxiangmu.com'>http://www.kaiyuanxiangmu.com</a></span>
+            <span>官方网站:</span><br/><span><a href='http://www.kaiyuanxiangmu.com/world/flower-world'>http://www.kaiyuanxiangmu.com/world/flower-world</a></span>
             <br/>
             <span>开源代码:</span><br/><span><a href='https://github.com/openproject/world'>https://github.com/openproject/world</a></span>
             <br/>
