update the flower world official site in about activity

--- a/floworld/assets/setting_about_link.html
+++ b/floworld/assets/setting_about_link.html
@@ -23,7 +23,7 @@
             <br/>
             <span>开源代码:</span><br/><span><a href='https://github.com/openproject/world'>https://github.com/openproject/world</a></span>
             <br/>
-            <span>欢迎加入我们，我们需要您的支持!!!</span>
+            <span>欢迎加入我们，我们需要您的支持!!!sss</span>
         </div>
     </body>
 </html>
